--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@ header {
     .back{
         position: relative;
     }
-    img {
+    .movie {
         position: absolute;
         width: 100%;
         height: $height;
