--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,11 @@ header {
         width: 100%;
         height: $height;
     }
+    .mobile{
+        position: absolute;
+        width: 100%;
+        height: $height;
+    }
     .cover {
         position: absolute;
         width: 100%;
